--- a/Captain/Captain.csproj
+++ b/Captain/Captain.csproj
@@ -1,58 +1,90 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net8.0;net9.0;</TargetFrameworks>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-	<Version>1.0.0</Version>
-	<Authors>Bradley Ables</Authors>
-	<ApplicationIcon>hookz3.ico</ApplicationIcon>
-	<Description>Hookz adds composable middleware-style hooks to your Minimal API endpoints, enabling clean pre-processing, post-processing, and finalization logic without cluttering your handlers.
+	<PropertyGroup>
+		<TargetFrameworks>net8.0;net9.0;</TargetFrameworks>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Version>1.0.1</Version>
+		<Authors>Bradley Ables</Authors>
+		<Description>
+			Hookz adds composable middleware-style hooks to your Minimal API endpoints, enabling clean pre-processing,
+			post-processing, and finalization logic without cluttering your handlers.
 
-Whether you're logging requests, injecting metrics, short-circuiting bad input, or decorating responses, Hookz lets you do it inline, fluently, and with full access to the HttpContext.</Description>
-	<Title>Captain Hookz</Title>
-	<PackageIcon></PackageIcon>
-	<RepositoryUrl>https://github.com/bradleyables22/Hookz</RepositoryUrl>
-	<RepositoryType></RepositoryType>
-	<PackageTags>bradley,bradleyables,ables,aspnetcore,aspnet,minimalapi,minimal-api,minimal,endpoints,routehandler,HttpContext,hookz,middleware,extension-methods,lifecycle,pipeline,webapi,extensions,net8</PackageTags>
-	<PackageReleaseNotes>1.0.0 has dropped! This is the initial MVP, but more features will follow!</PackageReleaseNotes>
-	<PackageId>Captain.Hookz</PackageId>
-	<PackageReadmeFile>README.md</PackageReadmeFile>
-	<Product>Captain.Hookz</Product>
-	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-  </PropertyGroup>
+			Whether you're logging requests, injecting metrics, short-circuiting bad input, or decorating responses,
+			Hookz lets you do it inline, fluently, and with full access to the HttpContext.
+		</Description>
+		<Title>Captain Hookz</Title>
+		<PackageIcon>hookz3.jpg</PackageIcon>
+		<RepositoryUrl>https://github.com/bradleyables22/Hookz</RepositoryUrl>
+		<RepositoryType></RepositoryType>
+		<PackageTags>
+			bradley,bradleyables,ables,aspnetcore,aspnet,minimalapi,minimal-api,minimal,endpoints,routehandler,
+			HttpContext,hookz,middleware,extension-methods,lifecycle,pipeline,webapi,extensions,net8
+		</PackageTags>
+		<PackageReleaseNotes>1.0.1 has dropped! This is the initial MVP, but more features will follow!</PackageReleaseNotes>
+		<PackageId>Captain.Hookz</PackageId>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<Product>Captain.Hookz</Product>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Copyright>Nah</Copyright>
+		<PackageProjectUrl>https://github.com/bradleyables22/Hookz</PackageProjectUrl>
+		<ApplicationIcon>Images/hookz3.ico</ApplicationIcon>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
-    <IsAotCompatible>True</IsAotCompatible>
-    <IsTrimmable>False</IsTrimmable>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
+		<IsAotCompatible>True</IsAotCompatible>
+		<IsTrimmable>False</IsTrimmable>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
-    <IsAotCompatible>True</IsAotCompatible>
-    <IsTrimmable>False</IsTrimmable>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
+		<IsAotCompatible>True</IsAotCompatible>
+		<IsTrimmable>False</IsTrimmable>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0|AnyCPU'">
-    <IsAotCompatible>True</IsAotCompatible>
-    <IsTrimmable>False</IsTrimmable>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0|AnyCPU'">
+		<IsAotCompatible>True</IsAotCompatible>
+		<IsTrimmable>False</IsTrimmable>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
-    <IsAotCompatible>True</IsAotCompatible>
-    <IsTrimmable>False</IsTrimmable>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
+		<IsAotCompatible>True</IsAotCompatible>
+		<IsTrimmable>False</IsTrimmable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="hookz3.ico" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="hookz3.ico" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Images\hookz3.ico">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Include="Images\hookz3.ico">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Images\hookz3.jpg">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
+
 	<ItemGroup>
-	  <None Include="..\README.md">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
 	</ItemGroup>
+
 </Project>
